--- a/src/main/resources/templates/MentorAddBooking.html
+++ b/src/main/resources/templates/MentorAddBooking.html
@@ -57,7 +57,7 @@
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/bookLab">Book a Lab</a>
+                    <a class="dropdown-item" href=/AddMentorBooking>Book a Lab</a>
                     <a class="dropdown-item" href="/ViewMentorBooking">View Bookings</a>
                 </div>
             </li>
