--- a/src/main/resources/templates/MentorDashboard.html
+++ b/src/main/resources/templates/MentorDashboard.html
@@ -30,7 +30,7 @@
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/MentorAddBooking">Book a Lab</a>
+                    <a class="dropdown-item" href="/AddMentorBooking">Book a Lab</a>
                     <a class="dropdown-item" href="/ViewMentorBooking">View Bookings</a>
                 </div>
             </li>
