--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -50,9 +50,6 @@
                 <a class="nav-link" href="/manage-users">Manage Users</a>
             </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="#">Generate Reports</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/Profile">Profile</a>
             </li>
