--- a/src/main/resources/templates/AdminViewBookings.html
+++ b/src/main/resources/templates/AdminViewBookings.html
@@ -96,9 +96,6 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Generate Reports</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="/Profile">Profile</a>
             </li>
             <li class="nav-item">
@@ -107,40 +104,51 @@
         </ul>
     </div>
 </nav>
-<div class="container mt-4">
-    <h1>All Bookings</h1>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Booking No</th>
-            <th>Booker info</th>
-            <th>Booker role</th>
-            <th>Lab</th>
-            <th>Start Time</th>
-            <th>End Time</th>
-            <th>Status</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="booking : ${bookings}">
-            <td th:text="${booking.bookingNo}"></td>
-            <td th:text="${booking.user.firstname + ' ' + booking.user.lastname}"></td>
-            <td th:text="${booking.user.role}"></td>
-            <td th:text="${booking.lab.lab_location}"></td>
-            <td th:text="${#temporals.format(booking.availableTimeSlot.startTime, 'HH:mm')}"></td>
-            <td th:text="${#temporals.format(booking.availableTimeSlot.endTime, 'HH:mm')}"></td>
-            <td th:text="${booking.status}"></td>
-            <td>
-                <a class="btn btn-primary" th:href="@{'/booking/details/' + ${booking.id}}">View Details</a>
-            </td>
-
-
-        </tr>
-
-        </tbody>
-    </table>
+<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-12">
+            <div class="card shadow-lg">
+                <div class="card-header bg-primary text-white">
+                    <h4 class="mb-0">All Bookings</h4>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>Booking No</th>
+                                <th>Booker info</th>
+                                <th>Booker role</th>
+                                <th>Lab</th>
+                                <th>Start Time</th>
+                                <th>End Time</th>
+                                <th>Status</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="booking : ${bookings}">
+                                <td th:text="${booking.bookingNo}"></td>
+                                <td th:text="${booking.user.firstname + ' ' + booking.user.lastname}"></td>
+                                <td th:text="${booking.user.role}"></td>
+                                <td th:text="${booking.lab.lab_location}"></td>
+                                <td th:text="${#temporals.format(booking.startTime, 'HH:mm')}"></td>
+                                <td th:text="${#temporals.format(booking.endTime, 'HH:mm')}"></td>
+                                <td th:text="${booking.status}"></td>
+                                <td>
+                                    <a class="btn btn-primary" th:href="@{'/booking/details/' + ${booking.id}}">View Details</a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
