--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -55,6 +55,9 @@
                 </div>
                 <div class="card-body">
                     <div th:if="${error != null}" th:text="${error}" class="error-message alert alert-danger"></div>
+                    <div th:if="${successMessage}" class="alert alert-success" role="alert">
+                        <p th:text="${successMessage}"></p>
+                    </div>
                     <form  th:action="@{/login}" method="post">
                         <div class="form-group">
                             <label for="username">Username:</label>
