--- a/src/main/resources/templates/MentorBookingConfirmation.html
+++ b/src/main/resources/templates/MentorBookingConfirmation.html
@@ -63,7 +63,7 @@
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/MentorAddBooking">Book a Lab</a>
+                    <a class="dropdown-item" href="/Mentor_BookLab">Book a Lab</a>
                     <a class="dropdown-item" href="/ViewMentorBooking">View Bookings</a>
                 </div>
             </li>
@@ -87,14 +87,18 @@
             <h6>Booking Details</h6>
             <p class="mb-1">Lab: <span th:text="${booking.lab.lab_location}"></span></p>
 
-            <div th:each="timeSlot : ${booking.getAvailableTimeSlot()}" th:text="|${#temporals.format(timeSlot.startTime, 'HH:mm')} - ${#temporals.format(timeSlot.endTime, 'HH:mm')}|"></div>
+            <div>
+                <p th:text="|Start Time: ${#temporals.format(booking.startTime, 'HH:mm')}|"></p>
+                <p th:text="|End Time: ${#temporals.format(booking.endTime, 'HH:mm')}|"></p>
+            </div>
 
-            <p class="mb-1 ">Booking Number: <span class="booking-number" th:text="${booking.bookingNo}"></span></p>
+            <p class="mb-1">Booking Number: <span class="booking-number" th:text="${booking.bookingNo}"></span></p>
         </div>
         <div class="receipt-footer">
-            <p class="mb-0">your booking has being successfully submitted!</p>
+            <p class="mb-0">Your booking has been successfully submitted!</p>
         </div>
     </div>
 </div>
+
 </body>
 </html>
