--- a/src/main/resources/templates/StudentBooking.html
+++ b/src/main/resources/templates/StudentBooking.html
@@ -6,9 +6,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <style>
+
         body {
+            background-color: #f8f9fa;
             font-family: 'Poppins', sans-serif;
         }
+        .navbar {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .navbar-brand {
+            font-weight: 600;
+        }
+        .nav-link {
+            font-weight: 500;
+        }
+        .dropdown-menu {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .dropdown-item {
+            font-weight: 400;
+        }
+
     </style>
 
 </head>
