--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <style>
+     <style>
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #f8f9fa;
@@ -13,9 +14,19 @@
         .navbar {
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        .container {
-            max-width: 800px;
+        .navbar-brand {
+            font-weight: 600;
         }
+        .nav-link {
+            font-weight: 500;
+        }
+        .dropdown-menu {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .dropdown-item {
+            font-weight: 400;
+        }
+
 
         .receipt {
             background-color: #ffffff;
@@ -79,23 +90,27 @@
     </div>
 </nav>
 <div class="container my-5">
-<h1 class="text-center mb-4">Booking Submission</h1>
-<div class="receipt">
-    <div class="receipt-header">
-        <h5 class="mb-0">Booking Receipt</h5>
-    </div>
-    <div class="receipt-body">
-        <h6>Booking Details</h6>
-        <p class="mb-1">Lab: <span th:text="${booking.lab.lab_location}"></span></p>
+    <h1 class="text-center mb-4">Booking Submission</h1>
+    <div class="receipt">
+        <div class="receipt-header">
+            <h5 class="mb-0">Booking Receipt</h5>
+        </div>
+        <div class="receipt-body">
+            <h6>Booking Details</h6>
+            <p class="mb-1">Lab: <span th:text="${booking.lab.lab_location}"></span></p>
 
-            <div th:each="timeSlot : ${booking.getAvailableTimeSlot()}" th:text="|${#temporals.format(timeSlot.startTime, 'HH:mm')} - ${#temporals.format(timeSlot.endTime, 'HH:mm')}|"></div>
+            <div>
+                <p th:text="|Start Time: ${#temporals.format(booking.startTime, 'HH:mm')}|"></p>
+                <p th:text="|End Time: ${#temporals.format(booking.endTime, 'HH:mm')}|"></p>
+            </div>
 
-        <p class="mb-1 ">Booking Number: <span class="booking-number" th:text="${booking.bookingNo}"></span></p>
-    </div>
-    <div class="receipt-footer">
-        <p class="mb-0">your booking has being successfully submitted!</p>
+            <p class="mb-1">Booking Number: <span class="booking-number" th:text="${booking.bookingNo}"></span></p>
+        </div>
+        <div class="receipt-footer">
+            <p class="mb-0">Your booking has been successfully submitted!</p>
+        </div>
     </div>
 </div>
-</div>
+
 </body>
 </html>
