--- a/src/main/resources/templates/manage-users.html
+++ b/src/main/resources/templates/manage-users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -45,7 +45,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="BookingDropdown">
                     <a class="dropdown-item" href="/AllBookings">View All Bookings</a>
-                    <a class="dropdown-item" href="#">Approve Lab Bookings</a>
+
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -67,9 +67,6 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">Generate Reports</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="/Profile">Profile</a>
             </li>
             <li class="nav-item">
@@ -80,38 +77,47 @@
 </nav>
 
 
-<div class="container mt-5">
-    <h1>Manage Users</h1>
-    <div class="text-right mb-3">
-        <a href="/add-user" class="btn btn-primary">Add User</a>
+<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-12">
+            <div class="card shadow-lg">
+                <div class="card-header bg-primary text-white">
+                    <h4 class="mb-0">Manage Users</h4>
+                </div>
+                <div class="card-body">
+                    <div class="text-right mb-3">
+                        <a href="/add-user" class="btn btn-primary">Add User</a>
+                    </div>
+                    <div class="table-responsive ">
+                        <table class="table ">
+                            <thead class="bg-primary text-white">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Username</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Role</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="user, userStat : ${users}">
+                                <th scope="row" th:text="${userStat.index + 1}"></th>
+                                <td th:text="${user.username}"></td>
+                                <td th:text="${user.firstname}"></td>
+                                <td th:text="${user.lastname}"></td>
+                                <td th:text="${user.email}"></td>
+                                <td th:text="${user.getRole()}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <table class="table">
-        <thead class="thead-dark">
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Username</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Email</th>
-            <th scope="col">Role</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user, userStat : ${users}">
-
-            <th scope="row" th:text="${userStat.index + 1}"></th>
-            <td th:text="${user.username}"></td>
-            <td th:text="${user.firstname}"></td>
-            <td th:text="${user.lastname}"></td>
-            <td th:text="${user.email}"></td>
-            <td th:text="${user.getRole()}"></td>
-
-        </tr>
-        </tbody>
-    </table>
-
 </div>
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
