--- a/src/main/resources/templates/AddBooking.html
+++ b/src/main/resources/templates/AddBooking.html
@@ -103,7 +103,8 @@
                         </div>
                         <div class="form-group">
                             <label for="bookingDate">Booking Date:</label>
-                            <input type="date" class="form-control" id="bookingDate" name="bookingDate" required>
+                            <input type="date" class="form-control" id="bookingDate" name="bookingDate"
+                                   th:min="${#dates.format(#dates.createNow(),'yyyy-MM-dd')}" required>
                         </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-primary">Book Lab</button>
