--- a/src/main/resources/templates/Booking_Details.html
+++ b/src/main/resources/templates/Booking_Details.html
@@ -121,9 +121,9 @@
                 <input type="hidden" th:field="*{id}">
                 <div class="form-group">
                     <label for="status">Update Status:</label>
-                    <select class="form-control" id="status" th:field="*{status}">
-                        <option value="APPROVED" th:selected="${booking.status == 'APPROVED'}">Approved</option>
-                        <option value="REJECTED" th:selected="${booking.status == 'REJECTED'}">Rejected</option>
+                    <select class="form-control" id="status" th:field="*{status} " >
+                        <option value="REJECTED" th:selected="${booking.status == 'REJECTED'}">REJECTED</option>
+                        <option value="APPROVED" th:selected="${booking.status == 'APPROVED'}">APPROVED</option>
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Update Status</button>
@@ -137,13 +137,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    $(document).ready(function() {
-        // Disable the select dropdown if the status has been updated
-        $('select#status').change(function() {
-            $(this).prop('disabled', true); // Disable the select dropdown
-        });
-    });
-</script>
+
 </body>
 </html>
